generated/checkers/gen/AllGen-Out-of-Bound-3f7d9c1964fcd16d02a8a9d4fd6f6cb60c4cc530/build_logs/syntax-repair-03/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static bool {anonymous}::SAGenTestChecker::isLenAPICall(const clang::Expr*, llvm::StringRef&, unsigned int&, unsigned int)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:143:37: error: binding reference of type ‘clang::ento::CheckerContext&’ to ‘const clang::ento::CheckerContext’ discards qualifiers
  143 |     if (ExprHasName(Origin, E.Name, *(const CheckerContext*)nullptr)) {
      |                                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:15:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Checkers/utility.h:104:65: note:   initializing argument 3 of ‘bool ExprHasName(const clang::Expr*, llvm::StringRef, clang::ento::CheckerContext&)’
  104 | bool ExprHasName(const Expr *E, StringRef Name, CheckerContext &C);
      |                                                 ~~~~~~~~~~~~~~~~^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static bool {anonymous}::SAGenTestChecker::isLenAPICandidate(const clang::Expr*, llvm::StringRef&, unsigned int&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:168:37: error: binding reference of type ‘clang::ento::CheckerContext&’ to ‘const clang::ento::CheckerContext’ discards qualifiers
  168 |     if (ExprHasName(Origin, E.Name, *(const CheckerContext*)nullptr)) {
      |                                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:15:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Checkers/utility.h:104:65: note:   initializing argument 3 of ‘bool ExprHasName(const clang::Expr*, llvm::StringRef, clang::ento::CheckerContext&)’
  104 | bool ExprHasName(const Expr *E, StringRef Name, CheckerContext &C);
      |                                                 ~~~~~~~~~~~~~~~~^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static clang::ento::ProgramStateRef {anonymous}::SAGenTestChecker::markChecked(clang::ento::ProgramStateRef, const clang::ento::MemRegion*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:188:55: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::ento::MemRegion*> >::lookup_type’ {aka ‘const clang::ento::MemRegion* const*’} to ‘const clang::ento::MemRegion*’ in initialization
  188 |   if (const MemRegion *Alias = State->get<PtrAliasMap>(Base)) {
      |                                ~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
      |                                                       |
      |                                                       clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::ento::MemRegion*> >::lookup_type {aka const clang::ento::MemRegion* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkBind(clang::ento::SVal, clang::ento::SVal, const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:315:59: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::ento::MemRegion*> >::lookup_type’ {aka ‘const clang::ento::MemRegion* const*’} to ‘const clang::ento::MemRegion*’ in initialization
  315 |       if (const MemRegion *Alias = State->get<PtrAliasMap>(DstR)) {
      |                                    ~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
      |                                                           |
      |                                                           clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::ento::MemRegion*> >::lookup_type {aka const clang::ento::MemRegion* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPreCall(const clang::ento::CallEvent&, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:404:57: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::ento::MemRegion*> >::lookup_type’ {aka ‘const clang::ento::MemRegion* const*’} to ‘const clang::ento::MemRegion*’ in initialization
  404 |     if (const MemRegion *Alias = State->get<PtrAliasMap>(LenR)) {
      |                                  ~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
      |                                                         |
      |                                                         clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::ento::MemRegion*> >::lookup_type {aka const clang::ento::MemRegion* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: At global scope:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:152:6: warning: ‘static bool {anonymous}::SAGenTestChecker::isLenAPICandidate(const clang::Expr*, llvm::StringRef&, unsigned int&)’ defined but not used [-Wunused-function]
  152 | bool SAGenTestChecker::isLenAPICandidate(const Expr *Origin, StringRef &NameOut, unsigned &LenIdx) {
      |      ^~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:125:6: warning: ‘static bool {anonymous}::SAGenTestChecker::isLenAPICall(const clang::Expr*, llvm::StringRef&, unsigned int&, unsigned int)’ defined but not used [-Wunused-function]
  125 | bool SAGenTestChecker::isLenAPICall(const Expr *Origin, StringRef &NameOut, unsigned &LenIdx, unsigned ArgCount) {
      |      ^~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
